--- a/PW-38-3/blurmaker.ui
+++ b/PW-38-3/blurmaker.ui
@@ -24,7 +24,7 @@
     <item>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
-       <widget class="QLabel" name="displayPick">
+       <widget class="QLabel" name="displayPic">
         <property name="styleSheet">
          <string notr="true">background-color:rgb(255, 255, 255)</string>
         </property>
